changed assets path

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <section class="main__section">
             <h2 class="heading">
               <a href="" class="heading__imgLink">
-                <img src="./assets/portfolio-photo.jpg" alt="PHOTOGRAPH">
+                <img src="./portfolio-photo.jpg" alt="PHOTOGRAPH">
               </a>
             </h2>
             <p>
@@ -47,7 +47,7 @@
           <section class="main__section">
             <h2 class="heading">
               <a href="" class="heading__imgLink">
-                <img src="./assets/portfolio-video.jpg" alt="VIDEO">
+                <img src="./portfolio-video.jpg" alt="VIDEO">
               </a>
             </h2>
             <p>
