[clean] July 28 お昼のコミットに対しての指摘点修正
ディレクトリ/ファイル構造、scssインデント、変数調整

--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
           <section class="main__section">
             <h2 class="heading">
               <a href="" class="heading__imgLink">
-                <img src="./portfolio-photo.jpg" alt="PHOTOGRAPH">
+                <img src="./src/assets/portfolio-photo.jpg" alt="PHOTOGRAPH">
               </a>
             </h2>
             <p>
               ふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふが
               ふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふが
-              <a href="" class="textLink__moreInfo">詳しくみる ≫</a>
+              <a href="" class="textLink-moreinfo">詳しくみる ≫</a>
             </p>
           </section>
           <section class="main__section">
             <h2 class="heading">
               <a href="" class="heading__imgLink">
-                <img src="./portfolio-video.jpg" alt="VIDEO">
+                <img src="./src/assets/portfolio-video.jpg" alt="VIDEO">
               </a>
             </h2>
             <p>
               ほげふがほげふがほげふがほげふがほげふがほげふがほげふがほげふがほげふがほげふが
               ほげふがほげふほげふがほげふがほげふがほげふがほげふがほげふがほげふがほげふが
-              <a href="" class="textLink__moreInfo">詳しくみる ≫</a>
+              <a href="" class="textLink-moreinfo">詳しくみる ≫</a>
             </p>
           </section>
         </main>
