[clean] pull request#1への指摘事項修正

--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
           <p>ほげほげほげほげほげほげほげほげほげほげほげほげほげほげほげほげほげほげ</p>
           <section class="main__section">
             <h2 class="heading">
-              <a href="" class="heading__imgLink">
+              <a href="" class="heading__img-link">
                 <img src="./src/assets/portfolio-photo.jpg" alt="PHOTOGRAPH">
               </a>
             </h2>
             <p>
               ふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふが
               ふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふが
-              <a href="" class="textLink-moreinfo">詳しくみる ≫</a>
+              <a href="" class="text-link-moreinfo">詳しくみる ≫</a>
             </p>
           </section>
           <section class="main__section">
             <h2 class="heading">
-              <a href="" class="heading__imgLink">
+              <a href="" class="heading__img-link">
                 <img src="./src/assets/portfolio-video.jpg" alt="VIDEO">
               </a>
             </h2>
             <p>
               ほげふがほげふがほげふがほげふがほげふがほげふがほげふがほげふがほげふがほげふが
               ほげふがほげふほげふがほげふがほげふがほげふがほげふがほげふがほげふがほげふが
-              <a href="" class="textLink-moreinfo">詳しくみる ≫</a>
+              <a href="" class="text-link__more-info">詳しくみる ≫</a>
             </p>
           </section>
         </main>
@@ -61,9 +61,9 @@
           <section>
             <h2 class="heading heading__level2">Sidebar</h2>
             <ul class="sidebar__list">
-              <li class="sidebar__listItem"><a href="">リスト1</a></li>
-              <li class="sidebar__listItem"><a href="">リスト2</a></li>
-              <li class="sidebar__listItem"><a href="">りスト3</a></li>
+              <li class="sidebar__list-item"><a href="">リスト1</a></li>
+              <li class="sidebar__list-item"><a href="">リスト2</a></li>
+              <li class="sidebar__list-item"><a href="">りスト3</a></li>
             </ul>
           </section>
         </aside>
@@ -74,7 +74,7 @@
     <!-- footer始まり -->
     <footer class="footer">
       <div class="content__inner--footer">
-        <small class="footer__copyRight">(C)2020 Nextbeat</small>
+        <small class="footer__copy-right">(C)2020 Nextbeat</small>
       </div>
     </footer>
     <!-- footer終わり -->
