[clean] July28の19:00コミットへの指摘事項修正
- レイアウト崩れ修正
- 見出しのクラス名変更
- サイドバーのリストのクラス名変更

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="wrap" class="content">
       <div class="content__inner">
         <main class="main">
-          <h1 class="heading heading__level1">Section1</h1>
+          <h1 class="heading heading__large--borderbottom">Section1</h1>
           <p>ほげほげほげほげほげほげほげほげほげほげほげほげほげほげほげほげほげほげ</p>
           <section class="main__section">
             <h2 class="heading">
@@ -59,11 +59,11 @@
         </main>
         <aside class="sidebar">
           <section>
-            <h2 class="heading heading__level2">Sidebar</h2>
+            <h2 class="heading heading__sidebar">Sidebar</h2>
             <ul class="sidebar__list">
-              <li class="sidebar__list-item"><a href="">リスト1</a></li>
-              <li class="sidebar__list-item"><a href="">リスト2</a></li>
-              <li class="sidebar__list-item"><a href="">りスト3</a></li>
+              <li class="sidebar__list--item"><a href="">リスト1</a></li>
+              <li class="sidebar__list--item"><a href="">リスト2</a></li>
+              <li class="sidebar__list--item"><a href="">りスト3</a></li>
             </ul>
           </section>
         </aside>
