[clean] css値のインデント調整、詳細リンクclass名修正、html全体のbasei font size指定

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>
               ふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふが
               ふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふがふが
-              <a href="" class="text-link-moreinfo">詳しくみる ≫</a>
+              <a href="" class="text-link__more-info">詳しくみる ≫</a>
             </p>
           </section>
           <section class="main__section">
